# NFE

./: .gitignore  AGENTS.md  Cargo.toml  README.md  best_runtime_config.json  default.nix  flake.nix  repomix-output.xml  result  todo.md
.github/workflows/: ci.yml  release.yml  sd-image.yml
docs/: config-parameters.md  refactor-architecture.md
hosts/nfe/: configuration.nix
modules/: car-service.nix  preempt-rt.nix
runs/tuning/plots/: trials.csv
tools/: pyproject.toml
tools/src/: track.py
tools/src/nfe_tools/: __init__.py  bench_analyze.py  optuna_plot.py  optuna_tuner.py
worlds/tracks/: awake1.json  berlin.json  minispa.json  test1.json
